<resources>
    <string name="app_name">火眼金睛</string>
    <string name="RMB">¥</string>
    <string name="PERCENT">%</string>
    <string name="DAY">天</string>

    <string name="todo">未指定</string>

    <!-- 提示 -->
    <string name="tip_title">温馨提示：</string>

    <string name="tip_credit_cash">\t\t\t\t1.非法使用信用卡套现属于违法行为;\n\t\t\t\t2.</string>


    <!-- 信用卡提现 -->
    <string name="function_Credit_Cash">信用卡提现</string>

    <string name="lie_amount">划款金额</string>
    <string name="lie_amount_hint">输入划款金额</string>
    <string name="lie_date">计划划款日期</string>
    <string name="lie_fee">划款费率</string>
    <string name="lie_fee_hint">输入划款费率</string>
    <string name="lie_credit_billdate">信用卡账单日</string>
    <string name="lie_credit_deadline">信用卡最后还款日</string>
    <string name="lie_choose_credit"></string>
    <string name="lie_calculate">开启火眼金睛</string>
    <string name="lie_result_describe">信用卡提现成本测算</string>
    <string name="lie_result_fee">本次扣费金额</string>
    <string name="lie_result_amount">本次到手金额</string>
    <string name="lie_result_days">本次可用款天数</string>
    <string name="lie_result_interest">用款成本转换为年利率</string>
    <string name="lie_result_again">有本事你再变</string>
    <string name="lie_result_finish">已经看清</string>

    <string-array name="billDays">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
        <item>7日</item>
        <item>8日</item>
        <item>9日</item>
        <item>10日</item>
        <item>11日</item>
        <item>12日</item>
        <item>13日</item>
        <item>14日</item>
        <item>15日</item>
        <item>16日</item>
        <item>17日</item>
        <item>18日</item>
        <item>19日</item>
        <item>20日</item>
        <item>21日</item>
        <item>22日</item>
        <item>23日</item>
        <item>24日</item>
        <item>25日</item>
        <item>26日</item>
        <item>27日</item>
        <item>28日</item>
        <!--<item>每月1号</item>
        <item>每月2号</item>
        <item>每月3号</item>
        <item>每月4号</item>
        <item>每月5号</item>
        <item>每月6号</item>
        <item>每月7号</item>
        <item>每月8号</item>
        <item>每月9号</item>
        <item>每月10号</item>
        <item>每月11号</item>
        <item>每月12号</item>
        <item>每月13号</item>
        <item>每月14号</item>
        <item>每月15号</item>
        <item>每月16号</item>
        <item>每月17号</item>
        <item>每月18号</item>
        <item>每月19号</item>
        <item>每月20号</item>
        <item>每月21号</item>
        <item>每月22号</item>
        <item>每月23号</item>
        <item>每月24号</item>
        <item>每月25号</item>
        <item>每月26号</item>
        <item>每月27号</item>
        <item>每月28号</item>-->
    </string-array>


    <!-- APP信息 -->
    <string name="app_author">开发者信息</string>
    <string name="app_author_name">衷水木先生</string>
    <string name="app_author_email">jie581825@yeah.net</string>
    <string name="app_author_blog_csdn">https://blog.csdn.net/a_running_wolf</string>
    <string name="app_conte">作品渊源</string>
    <string name="app_conte_0">\u3000\u3000大学毕业，小木远漂他乡。中间隔着直线1154公里。</string>
    <string name="app_conte_1">\u3000\u30001、那一年，小木忽然发现同龄的小伙伴都结了婚，谈论的从原来的游戏变成房子、车子，
        反观自己还迷醉在过去的舒适状态。父母本就是勤恳的小农民，能供小木念完学费一万多的大学计算机已属不易，怎敢奢望还帮着买房买车。
        所幸家乡五六线的小市区在这几年房价疯涨的泡沫中并未丧失理智，但不能保证某一天就不会受大环境影响，万一到时候在老家也买不起一套房，
        未来岂非更加迷茫。由于之前没有什么积蓄，加上小木正好当时接到广发银行一个贷款推广活动，就似懂非懂地办了个手续费0.41%的一年短期
        现金贷款，信用卡每月出账，随信用卡账单一起还款。后来世纪开始还款，才发现所谓的手续费0.41%，无息，并没字面上这么实惠！</string>
    <string name="app_conte_2">\u3000\u30002、那几年，小木也热衷于各种高端电子产品，新款iPhone，机械键盘，游戏本……由于手头
        现金并不宽裕，又是各种分期大肆宣传，花呗分期、招行分期。用过几次才发现碰上免息分期还好，大部分都是有手续费的，折合成利息
        算下来真是一点都不低！本来想省一毛算一毛，结果还是被套路。</string>
    <string name="app_conte_finish">\u3000\u3000于是，就有了这个业余作品，希望能帮助更多想小木一样的人看清真相，拒接套路。
        （小木其实一点都不偏激，只是希望这个小工具帮大家做到心中有数，认清事实，并非是说现金贷、分期什么的不好，毕竟那时候广发
        的现金贷帮我凑够了首付；而且在你急需用钱的时候，蚂蚁借呗、信用卡取现都能帮到您，不必向别人开口欠人情，咱们不能用了人家
        的钱还说人家不好，毕竟现在的资金成本并不低；在你需要资金的时候用这个工具算一下，选一个成本相对低一点的方案也能帮您变相
        地省笔钱。）</string>
    <string name="app_conte_declaration">声明：小木的真实生活，请勿用作广告</string>
</resources>
